# browser-stream

./: Cargo.toml  README.md
src/: browser.rs  main.rs  websocket.rs
static/: index.html  index.js
