[package]
name = "browser-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-files = "0.6.2"
actix-web-actors = "4.1.0"
headless_chrome = "0.9.0"
serde = "1.0.140"
serde_json = "1.0.82"